--- a/frontend/swap-ui/src/swap/SwapForm.css
+++ b/frontend/swap-ui/src/swap/SwapForm.css
@@ -9,7 +9,7 @@
 }
 
 .form-error {
-  @apply p-6 bg-[#F04438] text-white rounded-lg mb-[20px];
+  @apply p-6 bg-[#F04438] text-white rounded-lg mb-[20px] max-w-full;
 
   &:last-of-type {
     @apply mb-0;
