--- a/frontend/swap-ui/src/styles/index.css
+++ b/frontend/swap-ui/src/styles/index.css
@@ -19,10 +19,9 @@ a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
+  &:hover {
+    color: #535bf2;
+  }
 }
 
 body {
@@ -37,22 +36,6 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
-  }
-}
-
 
 .Modal {
   position: absolute;
